# ll-hallucination-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: inference.toml  qlora_alpaca_10k.toml  qlora_alpaca_1k.toml  qlora_alpaca_full.toml  qlora_dolly_5k.toml  qlora_dolly_full.toml  qlora_smoketest.toml
docs/: eval_card_post.md  eval_card_pre.md  experiment_matrix_seed0.md  nvidia-smi.txt  qlora_training_recipe.csv  qlora_training_recipe.md  qualitative_arc_pre_vs_alpaca_10k_seed0.md  qualitative_arc_pre_vs_dolly_full_seed0.md  qualitative_cases_post_alpaca_10k_arc_seed0.md  qualitative_cases_post_alpaca_10k_seed0.md  qualitative_cases_post_alpaca_10k_truthfulqa_seed0.md  qualitative_cases_post_dolly_full_arc_seed0.md  qualitative_cases_post_dolly_full_seed0.md  qualitative_cases_post_dolly_full_truthfulqa_seed0.md  qualitative_cases_pre.md  qualitative_cases_pre_arc.md  qualitative_cases_pre_post.md  qualitative_cases_pre_truthfulqa.md  qualitative_tqa_pre_vs_alpaca_10k_seed0.md  qualitative_tqa_pre_vs_dolly_full_seed0.md  runbook.md  torch_env.txt
evals/: README.md
scripts/: baseline_load_qwen.py  bootstrap_mc_accuracy.py  build_postqlora_by_adapter_links.py  compare_pre_post.py  dump_torch_env.py  export_delta_summary_for_plots.py  export_experiment_matrix.py  export_qlora_recipe_table.py  generate_qualitative_arc_pre_vs_post.py  generate_qualitative_cases_post.py  generate_qualitative_cases_pre.py  generate_qualitative_cases_pre_post.py  generate_qualitative_tqa_pre_vs_post.py  inspect_arc_pre.py  inspect_truthfulqa_post.py  inspect_truthfulqa_pre.py  (+11 more)
(+13 files in other folders)
