[project]
name = "ll-hallucination-pipeline"
version = "0.1.0"
description = "TFG: Evaluación de alucinaciones en LLM pre y post QLoRA"
requires-python = "==3.10.*"

dependencies = [
  "transformers",
  "peft",
  "accelerate",
  "datasets",
  "evaluate",
  "huggingface_hub",
  "safetensors",
  "sentencepiece",
  "tokenizers",
  "einops",
  "scipy",
  "numpy",
  "tqdm",
  "lm-eval",
  "bitsandbytes",
  "protobuf",
  "torch>=2.9.1",
]

[project.optional-dependencies]
plots = [
  "matplotlib",
]